# rust-mailbox

./: Cargo.toml
src/: lib.rs
src/header/: date.rs  status.rs
src/mail/: headers.rs
src/stream/: async_iter.rs  async_lines.rs  mod.rs
src/stream/entry/: header.rs  mod.rs
