[package]
name = "mailbox"
version = "0.2.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "MBOX reader."
repository = "https://github.com/meh/rust-mailbox"
keywords = ["mail", "mbox"]

edition = "2021"

[dependencies]
bitflags = "2.5.0"
owning_ref = "0.4"
fnv = "1"

nom = "7"
casing = "0.1"
mime = "0.3"
time = { version = "0.3", features = ["parsing", "macros"] }

tokio = { version = "1", features = ["fs", "io-util"] }
async-stream = "0.3.5"
futures-core = "0.3.30"
